--- a/main.html
+++ b/main.html
@@ -7,10 +7,12 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+	 <div class="holder">
+        <div class="item"> 1</div>
+        <div class="item"> 2</div>
+        <div class="item"> 3</div>
+        <!-- Add more items here as needed -->
+    </div>
 </body>
 
 </html>
